[gd_scene load_steps=11 format=3 uid="uid://bk060r5x6fvpp"]

[ext_resource type="Texture2D" uid="uid://0qpvbftuyhpa" path="res://menus/logo.png" id="1_6ij7l"]
[ext_resource type="Script" path="res://menus/splash_screen.gd" id="1_p8k0o"]
[ext_resource type="PackedScene" uid="uid://jnx74gf5vqtp" path="res://menus/controller_select_screen.tscn" id="2_oun7v"]
[ext_resource type="Texture2D" uid="uid://dhsptxbrm7407" path="res://menus/background pattern.png" id="2_rbjv3"]
[ext_resource type="Shader" path="res://visuals/background_grid.gdshader" id="2_ujrbh"]
[ext_resource type="Texture2D" uid="uid://cbbcmflqrdguk" path="res://menus/space key icon.png" id="4_rd4c0"]
[ext_resource type="Texture2D" uid="uid://v6n7ufa2v353" path="res://menus/shift key icon.png" id="5_5qil2"]
[ext_resource type="Texture2D" uid="uid://jqo0ettiumum" path="res://menus/a button icon.png" id="6_7bij3"]
[ext_resource type="AudioStream" uid="uid://cmh110k5cn51o" path="res://menus/continue.wav" id="9_76u5c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_10t64"]
shader = ExtResource("2_ujrbh")
shader_parameter/rotation_angle = 0.785
shader_parameter/pattern = ExtResource("2_rbjv3")

[node name="SplashScreen" type="CanvasLayer"]
script = ExtResource("1_p8k0o")
controller_select_screen_scene = ExtResource("2_oun7v")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_10t64")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 840.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
color = Color(1, 0.866667, 0.168627, 1)

[node name="ScreenCenter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="Sprite2D" parent="ScreenCenter"]
position = Vector2(0, -94)
scale = Vector2(0.804688, 0.804688)
texture = ExtResource("1_6ij7l")

[node name="SpaceIcon" type="Sprite2D" parent="ScreenCenter"]
position = Vector2(-150, 366)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_rd4c0")

[node name="ShiftIcon" type="Sprite2D" parent="ScreenCenter"]
position = Vector2(0, 366)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_5qil2")

[node name="AButtonIcon" type="Sprite2D" parent="ScreenCenter"]
position = Vector2(150, 366)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_7bij3")

[node name="ContinueAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_76u5c")
volume_db = -6.0
